[gd_scene load_steps=2 format=3 uid="uid://bl3bbjkhgks23"]

[ext_resource type="Script" path="res://scripts/ShopManager.gd" id="1_shop_manager"]

[node name="ShopScene" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BackButton" type="Button" parent="CanvasLayer/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "‚Üê Back"

[node name="TitleLabel" type="Label" parent="CanvasLayer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PINBALL SHOP"
horizontal_alignment = 1

[node name="CurrencyDisplay" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HeaderContainer"]
layout_mode = 2

[node name="CoinLabel" type="Label" parent="CanvasLayer/VBoxContainer/HeaderContainer/CurrencyDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Coins: 0"

[node name="GemLabel" type="Label" parent="CanvasLayer/VBoxContainer/HeaderContainer/CurrencyDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.4, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Gems: 0"

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Balls" type="Control" parent="CanvasLayer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Balls"]
layout_mode = 0

[node name="ItemGrid" type="GridContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Balls/ScrollContainer"]
layout_mode = 2
columns = 3

[node name="Flippers" type="Control" parent="CanvasLayer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Flippers"]
layout_mode = 0

[node name="ItemGrid" type="GridContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Flippers/ScrollContainer"]
layout_mode = 2
columns = 3

[node name="Ramps" type="Control" parent="CanvasLayer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Ramps"]
layout_mode = 0

[node name="ItemGrid" type="GridContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Ramps/ScrollContainer"]
layout_mode = 2
columns = 3

[node name="Cosmetics" type="Control" parent="CanvasLayer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Cosmetics"]
layout_mode = 0

[node name="ItemGrid" type="GridContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Cosmetics/ScrollContainer"]
layout_mode = 2
columns = 3

[node name="Specials" type="Control" parent="CanvasLayer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Specials"]
layout_mode = 0

[node name="ItemGrid" type="GridContainer" parent="CanvasLayer/VBoxContainer/TabContainer/Specials/ScrollContainer"]
layout_mode = 2
columns = 3

[node name="ShopManager" type="Node" parent="."]
script = ExtResource("1_shop_manager")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HeaderContainer/BackButton" to="ShopManager" method="_on_back_pressed"]
